syntax = "proto3";

package api.mall.service.v1;

option go_package = "mall/api/mall/service/v1";

service ItemService {
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  rpc SearchItems(SearchItemsRequest) returns (SearchItemsResponse) {}
}

message GetItemRequest {
  int32 id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message SearchItemsRequest {
  string query = 1;
}

message SearchItemsResponse {
  repeated Item items = 1;
}

message Item {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
