syntax = "proto3";

package api.mall.service.v1;

import "google/api/annotations.proto";

option go_package = "api/mall/service/v1";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {get: "/v1/user/{id}"};
  }
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/user/refresh"
      body: "*"
    };
  }
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  Token token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Token token = 1;
}

message RefreshTokenRequest {
  string token = 1;
  string refresh_token = 2;
}

message RefreshTokenResponse {
  Token token = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message Token {
  string token = 1;
  string refresh_token = 2;
}
